--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - develop
       - feature/*
+    paths-ignore:
+      - "**.md"
+      - "LICENSE"
+      - "NOTICE"
   schedule:
     # UTC 時間で毎日 2:00 (JST で 11:00) に実行、月曜日から金曜日
     - cron: "0 2 * * 1-5"
