--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "pnpm -r --filter=./packages/* lint",
     "fmt": "pnpm -r --filter=./packages/* fmt",
     "test": "pnpm -r --filter=./packages/* test",
+    "check": "pnpm -r --filter=./packages/* check",
     "doc": "typedoc",
     "release:canary": "./scripts/release_canary.sh"
   },
