--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -1,21 +1,7 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "es2020",
-    "module": "es2020",
-    "strict": true,
-    "declaration": true,
-    "strictNullChecks": true,
-    "importHelpers": true,
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "stripInternal": true,
-    "newLine": "LF",
-    "types": [],
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
-    "declarationDir": "../../"
+    "declarationDir": "./types"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "tests"]
