--- a/packages/e2ee/tsconfig.json
+++ b/packages/e2ee/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declarationDir": "./types"
+    "declarationDir": "."
   },
   "include": ["src/sora_e2ee.ts"],
   "exclude": ["node_modules"]
