--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declarationDir": "./types"
+    "declarationDir": "../../"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "tests"]
