--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "examples": "vite build",
     "e2e-test": "playwright test --project=chromium",
     "build": "pnpm -r --filter=./packages/* build",
-    "lint": "pnpm -r --filter=./packages/* lint",
-    "fmt": "pnpm -r --filter=./packages/* fmt",
+    "lint": "pnpm -r --filter=./packages/* --filter=./examples lint",
+    "fmt": "pnpm -r --filter=./packages/* --filter=./examples fmt",
     "test": "pnpm -r --filter=./packages/* test",
-    "check": "pnpm -r --filter=./packages/* check",
+    "check": "pnpm -r --filter=./packages/* --filter=./examples check",
     "doc": "typedoc",
     "release:canary": "./scripts/release_canary.sh"
   },
