workspace:* を使うようにする

--- a/examples/package.json
+++ b/examples/package.json
@@ -5,6 +5,7 @@
     "fmt": "biome format --write .",
     "check": "tsc --noEmit"
   },
-  "devDependencies": {},
-  "dependencies": {}
+  "dependencies": {
+    "sora-js-sdk": "workspace:*"
+  }
 }
