--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -37,12 +37,9 @@ jobs:
       - run: pnpm install
       - run: pnpm run build
       - run: pnpm exec playwright install ${{ matrix.browser }} --with-deps
-      - run: pnpm exec playwright test tests/messaging.spec.ts --project=${{ matrix.browser }}
+      - run: pnpm exec playwright test --project=${{ matrix.browser }}
         env:
           VITE_SORA_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
-      # - run: pnpm exec playwright test --project=${{ matrix.browser }}
-      #   env:
-      #     VITE_SORA_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
       # - uses: actions/upload-artifact@v4
       #   if: always()
       #   with:
