--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "vite",
     "examples": "vite build",
-    "e2e-test": "playwright test --project=chromium",
+    "e2e-test": "pnpm run build && playwright test --project=chromium",
     "build": "pnpm -r --filter=./packages/* build",
     "lint": "pnpm -r --filter=./packages/* --filter=./examples lint",
     "fmt": "pnpm -r --filter=./packages/* --filter=./examples fmt",
