--- a/biome.jsonc
+++ b/biome.jsonc
@@ -3,6 +3,9 @@
   "organizeImports": {
     "enabled": true
   },
+  "files": {
+    "ignore": ["dist/**/*"]
+  },
   "linter": {
     "enabled": true,
     "rules": {
