--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "sora-js-sdk",
   "version": "2024.2.0-canary.0",
   "description": "WebRTC SFU Sora JavaScript SDK",
+  "type": "module",
   "main": "dist/sora.js",
   "module": "dist/sora.mjs",
   "types": "dist/sora.d.ts",
   "scripts": {
     "dev": "vite",
     "examples": "vite build",
+    "build": "vite build",
     "e2e-test": "pnpm run build && playwright test --project=chromium",
-    "build": "pnpm -r --filter=./packages/* build",
-    "lint": "pnpm -r --filter=./packages/* --filter=./examples lint",
+    "lint": "pnpm -r --filter=./src/* --filter=./examples lint",
     "fmt": "pnpm -r --filter=./packages/* --filter=./examples fmt",
     "test": "pnpm -r --filter=./packages/* test",
     "check": "pnpm -r --filter=./packages/* --filter=./examples check",
@@ -36,6 +37,7 @@
     "typedoc": "0.26.7",
     "typescript": "5.6.2",
     "vite": "5.4.3",
+    "vite-plugin-dts": "4.2.1",
     "vitest": "2.0.5"
   },
   "resolutions": {
