--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       matrix:
         # sdk_version: ["2024.1.2", "2023.2.0", "2023.1.0", "2022.3.2"]
-        sdk_version: ["2024.1.2"]
+        sdk_version: ["2024.1.2", "2023.2.0"]
         # node: ["18", "20", "22"]
         node: ["18"]
         # browser: ["chromium", "firefox", "webkit"]
