--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -19,7 +19,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        sdk_version: ["2024.1.2", "2023.2.0", "2023.1.0", "2022.3.2"]
+        sdk_version: [
+          "2024.1.2",
+          "2023.2.0",
+          "2023.1.0",
+          "2022.3.2",
+          "2022.1.0",
+          "2021.2.3",
+        ]
         # node: ["18", "20", "22"]
         node: ["18"]
         # browser: ["chromium", "firefox", "webkit"]
