--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -39,7 +39,7 @@ jobs:
       - run: pnpm exec playwright install ${{ matrix.browser }} --with-deps
       - run: pnpm exec playwright test --project=${{ matrix.browser }}
         env:
-          VITE_SORA_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
+          VITE_SORA_CHANNEL_ID_SUFFIX: _${{ github.run_id }}
       # - uses: actions/upload-artifact@v4
       #   if: always()
       #   with:
