失敗しても継続する

--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -16,6 +16,7 @@ on:
 jobs:
   npm-pkg-e2e-test:
     timeout-minutes: 20
+    continue-on-error: true
     runs-on: ubuntu-latest
     strategy:
       matrix:
