--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -19,8 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # node: ["18", "20", "22"]
-        node: ["22"]
+        node: ["18", "20", "22"]
         # browser: ["chromium", "firefox", "webkit"]
         browser: ["chromium"]
     env:
@@ -39,7 +38,7 @@ jobs:
       - run: pnpm exec playwright install ${{ matrix.browser }} --with-deps
       - run: pnpm exec playwright test --project=${{ matrix.browser }}
         env:
-          VITE_SORA_CHANNEL_ID_SUFFIX: _${{ github.run_id }}
+          VITE_SORA_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
       # - uses: actions/upload-artifact@v4
       #   if: always()
       #   with:
