--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -45,6 +45,12 @@ jobs:
       #     name: playwright-report
       #     path: playwright-report/
       #     retention-days: 30
+
+  slack_notify_succeeded:
+    needs: [e2e-test]
+    runs-on: ubuntu-latest
+    if: success()
+    steps:
       - name: Slack Notification
         if: success()
         uses: rtCamp/action-slack-notify@v2
@@ -54,6 +60,11 @@ jobs:
           SLACK_TITLE: Succeeded
           SLACK_ICON_EMOJI: ":star-struck:"
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+  slack_notify_failed:
+    needs: [e2e-test]
+    runs-on: ubuntu-latest
+    if: failure()
+    steps:
       - name: Slack Notification
         if: failure()
         uses: rtCamp/action-slack-notify@v2
