--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "sora-js-sdk",
-  "version": "2024.2.0-canary.13",
+  "version": "2024.2.0",
   "description": "WebRTC SFU Sora JavaScript SDK",
   "main": "dist/sora.js",
   "module": "dist/sora.mjs",
+  "types": "./dist/sora.d.ts",
   "exports": {
     ".": {
       "import": "./dist/sora.mjs",
-      "require": "./dist/sora.mjs",
-      "types": "./dist/sora.d.ts"
+      "require": "./dist/sora.mjs"
     }
   },
   "scripts": {
@@ -39,9 +39,9 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@playwright/test": "1.49.0",
-    "typedoc": "0.27.0",
+    "typedoc": "0.27.1",
     "typescript": "5.7.2",
-    "vite": "6.0.0",
+    "vite": "6.0.1",
     "vitest": "2.1.6"
   },
   "packageManager": "pnpm@9.12.3",
