--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "url": "https://discord.gg/shiguredo"
   },
   "homepage": "https://github.com/shiguredo/sora-js-sdk#readme",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@playwright/test": "1.49.0",
@@ -41,7 +43,7 @@
     "vite": "6.0.1",
     "vitest": "2.1.6"
   },
-  "packageManager": "pnpm@9.14.3",
+  "packageManager": "pnpm@9.15.0",
   "engines": {
     "node": ">=18"
   }
