--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -25,6 +25,7 @@ jobs:
     env:
       VITE_SORA_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
       VITE_SORA_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
+      VITE_SORA_API_URL: ${{ secrets.TEST_API_URL }}
       VITE_ACCESS_TOKEN: ${{ secrets.TEST_SECRET_KEY }}
     steps:
       - uses: actions/checkout@v4
