--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -56,7 +56,6 @@ jobs:
       - run: pnpm --version
       - run: pnpm install
       - run: pnpm add -E sora-js-sdk@${{ matrix.sdk_version }}
-      
         working-directory: ./examples
       # pnpm run build しない
       - run: pnpm exec playwright install ${{ matrix.browser }} --with-deps
@@ -69,20 +68,20 @@ jobs:
       #     name: playwright-report
       #     path: playwright-report/
       #     retention-days: 30
-      
-  slack_notify_succeeded:
-    needs: [npm-pkg-e2e-test]
-    runs-on: ubuntu-24.04
-    if: success()
-    steps:
-      - name: Slack Notification
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_CHANNEL: sora-js-sdk
-          SLACK_COLOR: good
-          SLACK_TITLE: Succeeded
-          SLACK_ICON_EMOJI: ":star-struck:"
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+
+  # slack_notify_succeeded:
+  #   needs: [npm-pkg-e2e-test]
+  #   runs-on: ubuntu-24.04
+  #   if: success()
+  #   steps:
+  #     - name: Slack Notification
+  #       uses: rtCamp/action-slack-notify@v2
+  #       env:
+  #         SLACK_CHANNEL: sora-js-sdk
+  #         SLACK_COLOR: good
+  #         SLACK_TITLE: Succeeded
+  #         SLACK_ICON_EMOJI: ":star-struck:"
+  #         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
   slack_notify_failed:
     needs: [npm-pkg-e2e-test]
     runs-on: ubuntu-24.04
