--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     }
   },
   "scripts": {
-    "dev": "vite",
-    "examples": "vite build",
+    "build": "vite build",
+    "watch": "vite build --watch",
+    "dev": "vite --config examples/vite.config.mjs",
     "e2e-test": "pnpm run build && playwright test --project=chromium",
-    "build": "pnpm -r --filter=./packages/* build",
     "lint": "biome lint",
     "fmt": "biome format --write",
-    "test": "pnpm -r --filter=./packages/* test",
-    "check": "pnpm -r --filter=./packages/* --filter=./examples check",
+    "check": "tsc --noEmit",
+    "test": "vitest run",
     "doc": "typedoc"
   },
   "repository": {
@@ -40,6 +40,8 @@
     "@playwright/test": "1.49.1",
     "typedoc": "0.27.5",
     "typescript": "5.7.2",
+    "jsdom": "25.0.1",
+    "vite-plugin-dts": "4.3.0",
     "vite": "6.0.3",
     "vitest": "2.1.8"
   },
