tsconfig に include を追加する

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,6 @@
     "types": [],
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "tests"]
 }
