サンプルや

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,8 @@
-# テストに利用する Sora の Signaling URL を指定してください
+# サンプルやテストに利用する Sora の Signaling URL を指定してください
 VITE_SORA_SIGNALING_URL=ws://127.0.0.1:5000/signaling
-# テストに利用する Sora の ChannelID のプレフィックスを指定してください
-VITE_SORA_CHANNEL_ID_PREFIX=sora-js-sdk-e2e-test_
-# テストに利用する Sora の API URL を指定ください、不要であれば空欄で大丈夫です
+# サンプルやテストに利用する Sora の ChannelID のプレフィックスを指定してください
+VITE_SORA_CHANNEL_ID_PREFIX=sora-js-sdk_
+# サンプルやテストに利用する Sora の API URL を指定ください、不要であれば空欄で大丈夫です
 VITE_SORA_API_URL=http://127.0.0.1:5000/
-# テストに利用するアクセストークンを指定してください、不要であれば空欄で大丈夫です
+# サンプルやテストに利用するアクセストークンを指定してください、不要であれば空欄で大丈夫です
 VITE_ACCESS_TOKEN=access_token
