--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,11 +27,16 @@ jobs:
       - run: pnpm run lint
       - run: pnpm run check
       - run: pnpm run test
+  slack_notify_failed:
+    needs: [ci]
+    runs-on: ubuntu-24.04
+    if: failure()
+    steps:
       - name: Slack Notification
-        if: failure()
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_CHANNEL: sora-js-sdk
           SLACK_COLOR: danger
-          SLACK_TITLE: Failure test
+          SLACK_TITLE: Failed
+          SLACK_ICON_EMOJI: ":japanese_ogre:"
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
