--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@playwright/test": "1.49.1",
+    "jsdom": "25.0.1",
+    "tslib": "2.8.1",
     "typedoc": "0.27.5",
     "typescript": "5.7.2",
-    "jsdom": "25.0.1",
-    "vite-plugin-dts": "4.3.0",
     "vite": "6.0.3",
+    "vite-plugin-dts": "4.3.0",
     "vitest": "2.1.8"
   },
   "packageManager": "pnpm@9.15.0",
