--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "vite build",
     "watch": "vite build --watch",
-    "dist": "pnpm clean && pnpm install && vite build && tsc",
+    "dist": "pnpm clean && pnpm install && vite build && tsc --emitDeclarationOnly",
     "dev": "vite --config examples/vite.config.mjs",
     "e2e-test": "pnpm build && playwright test --project=chromium",
     "lint": "biome lint",
