利用していない経路を削除する

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "stripInternal": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "newLine": "LF",
     "types": [],
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
