--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
   "scripts": {
     "build": "vite build",
     "watch": "vite build --watch",
-    "dist": "pnpm clean && pnpm install && vite build && tsc --emitDeclarationOnly",
     "dev": "vite --config examples/vite.config.mjs",
     "e2e-test": "pnpm build && playwright test --project=chromium",
     "lint": "biome lint",
     "fmt": "biome format --write",
     "check": "tsc --noEmit",
     "test": "vitest run",
-    "clean": "git clean -ffdx --exclude .env",
     "doc": "typedoc"
   },
   "repository": {
@@ -44,6 +42,7 @@
     "tslib": "2.8.1",
     "typedoc": "0.27.5",
     "typescript": "5.7.2",
+    "vite-plugin-dts": "4.3.0",
     "vite": "6.0.3",
     "vitest": "2.1.8"
   },
