paths に sora-js-sdk を指定する

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -14,6 +14,9 @@
     "stripInternal": true,
     "newLine": "LF",
     "types": [],
+    "paths": {
+      "sora-js-sdk": ["../dist/sora.d.ts"]
+    },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "exclude": ["node_modules"]
