--- a/.env.template
+++ b/.env.template
@@ -1,14 +1,14 @@
 # サンプルやテストに利用する Sora の Signaling URL を指定してください
 VITE_SORA_SIGNALING_URL=wss://sora.example.com/signaling
-# サンプルやテストに利用する Sora の ChannelID のプレフィックスを指定してください
-VITE_SORA_CHANNEL_ID_PREFIX=sora-js-sdk-examples__
+# サンプルやテストに利用する Sora の ChannelID を指定してください
+VITE_SORA_CHANNEL_ID=sora-js-sdk
 # サンプルやテストに利用するアクセストークンを指定してください、不要であれば空欄で大丈夫です
 VITE_ACCESS_TOKEN=access_token
 
 
 # サンプルやテストに利用する Sora の API URL を指定ください、不要であれば空欄で大丈夫です
 VITE_SORA_API_URL=https://sora.example.com/api
-# サンプルやテストに利用する Sora の WHIP のエンドポイント URL を指定してください
+# サンプルやテストに利用する Sora の WHIP のエンドポイント URL を指定してください、不要であれば空欄で大丈夫です
 VITE_SORA_WHIP_ENDPOINT_URL=https://sora.example.com/whip
-# サンプルやテストに利用する Sora の WHEP のエンドポイント URL を指定してください
+# サンプルやテストに利用する Sora の WHEP のエンドポイント URL を指定してください、不要であれば空欄で大丈夫です
 VITE_SORA_WHEP_ENDPOINT_URL=https://sora.example.com/whep
