--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "vite build",
     "watch": "vite build --watch",
-    "dev": "vite --config examples/vite.config.mjs",
+    "dev": "vite --config e2e-tests/vite.config.mjs",
     "e2e-test": "pnpm build && playwright test --project=chromium",
     "lint": "biome lint",
     "fmt": "biome format --write",
