--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -35,12 +35,12 @@ jobs:
         # browser: ["chromium", "firefox", "webkit"]
         browser: ["chromium"]
     env:
-      VITE_SORA_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
-      VITE_SORA_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
-      VITE_SORA_WHEP_ENDPOINT_URL: ${{ secrets.TEST_WHEP_ENDPOINT_URL }}
-      VITE_SORA_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
-      VITE_SORA_API_URL: ${{ secrets.TEST_API_URL }}
-      VITE_ACCESS_TOKEN: ${{ secrets.TEST_SECRET_KEY }}
+      VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
+      VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
+      VITE_TEST_WHEP_ENDPOINT_URL: ${{ secrets.TEST_WHEP_ENDPOINT_URL }}
+      VITE_TEST_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
+      VITE_TEST_API_URL: ${{ secrets.TEST_API_URL }}
+      VITE_TEST_SECRET_KEY: ${{ secrets.TEST_SECRET_KEY }}
       NPM_PKG_E2E_TEST: true
     steps:
       - uses: actions/checkout@v4
@@ -62,7 +62,7 @@ jobs:
       - run: pnpm exec playwright install ${{ matrix.browser }} --with-deps
       - run: pnpm exec playwright test --project=${{ matrix.browser }}
         env:
-          VITE_SORA_CHANNEL_ID_SUFFIX: _${{ matrix.node }}_${{ matrix.sdk_version }}
+          VITE_TEST_CHANNEL_ID_SUFFIX: _${{ matrix.node }}_${{ matrix.sdk_version }}
       # - uses: actions/upload-artifact@v4
       #   if: always()
       #   with:
