--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -23,12 +23,12 @@ jobs:
         # browser: ["chromium", "firefox", "webkit"]
         browser: ["chromium"]
     env:
-      TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
-      TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
-      TEST_WHEP_ENDPOINT_URL: ${{ secrets.TEST_WHEP_ENDPOINT_URL }}
-      TEST_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
-      TEST_API_URL: ${{ secrets.TEST_API_URL }}
-      TEST_SECRET_KEY: ${{ secrets.TEST_SECRET_KEY }}
+      VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
+      VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
+      VITE_TEST_WHEP_ENDPOINT_URL: ${{ secrets.TEST_WHEP_ENDPOINT_URL }}
+      VITE_TEST_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
+      VITE_TEST_API_URL: ${{ secrets.TEST_API_URL }}
+      VITE_TEST_SECRET_KEY: ${{ secrets.TEST_SECRET_KEY }}
     steps:
       - uses: actions/checkout@v4
       - uses: tailscale/github-action@v2
