--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        node: ["18", "20", "22"]
-        typescript: ["5.1", "5.2", "5.3", "5.4", "5.5", "5.6", "5.7"]
+        node: ["20", "22", "23"]
+        typescript: ["5.1", "5.2", "5.3", "5.4", "5.5", "5.6", "5.7", "next"]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
