--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -31,7 +31,7 @@ jobs:
           "2021.2.3",
           "2021.1.7",
         ]
-        node: ["18", "20", "22"]
+        node: ["18", "20", "22", "23"]
         # browser: ["chromium", "firefox", "webkit"]
         browser: ["chromium"]
     env:
