--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -8,7 +8,7 @@ on:
       - feature/*
     paths:
       - .github/workflows/npm-pkg-e2e-test.yml
-      - tests/**
+      - e2e-tests/**
   schedule:
     # UTC 時間で毎日 2:00 (JST で 11:00) に実行、月曜日から金曜日
     - cron: "0 2 * * 1-5"
