--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@playwright/test": "1.49.1",
+    "@types/node": "22.10.7",
     "jsdom": "26.0.0",
     "tslib": "2.8.1",
     "typedoc": "0.27.6",
     "typescript": "5.7.3",
-    "vite": "6.0.7",
+    "vite": "6.0.10",
     "vite-plugin-dts": "4.5.0",
     "vitest": "3.0.2"
   },
