--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "tslib": "2.8.1",
     "typedoc": "0.27.9",
     "typescript": "5.8.2",
-    "vite": "6.2.1",
+    "vite": "6.2.2",
     "vite-plugin-dts": "4.5.3",
     "vitest": "3.0.8"
   },
-  "packageManager": "pnpm@10.5.2",
   "engines": {
+    "pnpm": ">=10",
     "node": ">=20"
   }
 }
