--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,8 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       - uses: pnpm/action-setup@v4
+        with:
+          version: 10
       - run: pnpm --version
       - run: pnpm install
       - run: pnpm add -E -D typescript@${{ matrix.typescript }} -w
