--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -19,9 +19,35 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        node: ["20", "22", "23"]
-        # browser: ["chromium", "firefox", "webkit"]
-        browser: ["chromium"]
+        node:
+          - "20"
+          - "22"
+          - "23"
+        browser:
+          - name: "Google Chrome"
+            type: "chrome"
+            version: "stable"
+          - name: "Google Chrome Beta"
+            type: "chrome"
+            version: "beta"
+          - name: "Google Chrome Dev"
+            type: "chrome"
+            version: "dev"
+          - name: "Google Chrome Canary"
+            type: "chrome"
+            version: "canary"
+          - name: "Microsoft Edge"
+            type: "edge"
+            version: "stable"
+          - name: "Microsoft Edge Beta"
+            type: "edge"
+            version: "beta"
+          - name: "Microsoft Edge Dev"
+            type: "edge"
+            version: "dev"
+          - name: "Microsoft Edge Canary"
+            type: "edge"
+            version: "canary"
     env:
       VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
       VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
@@ -36,6 +62,14 @@ jobs:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
           oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
           tags: tag:ci
+      - if: matrix.browser.type == 'chrome'
+        uses: browser-actions/setup-chrome@v1
+        with:
+          chrome-version: ${{ matrix.browser.version }}
+      - if: matrix.browser.type == 'edge'
+        uses: browser-actions/setup-edge@v1
+        with:
+          edge-version: ${{ matrix.browser.version }}
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
@@ -45,8 +79,7 @@ jobs:
       - run: pnpm --version
       - run: pnpm install
       - run: pnpm run build
-      - run: pnpm exec playwright install ${{ matrix.browser }} --with-deps
-      - run: pnpm exec playwright test --project=${{ matrix.browser }}
+      - run: pnpm exec playwright test --project=${{ matrix.browser.name }}
         env:
           VITE_TEST_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
       # - uses: actions/upload-artifact@v4
