--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -33,9 +33,9 @@ jobs:
           - name: "Google Chrome Dev"
             type: "chrome"
             version: "dev"
-          - name: "Google Chrome Canary"
-            type: "chrome"
-            version: "canary"
+          # - name: "Google Chrome Canary"
+          #   type: "chrome"
+          #   version: "canary"
           - name: "Microsoft Edge"
             type: "edge"
             version: "stable"
@@ -45,9 +45,9 @@ jobs:
           - name: "Microsoft Edge Dev"
             type: "edge"
             version: "dev"
-          - name: "Microsoft Edge Canary"
-            type: "edge"
-            version: "canary"
+          # - name: "Microsoft Edge Canary"
+          #   type: "edge"
+          #   version: "canary"
     env:
       VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
       VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
