--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -21,30 +21,30 @@ jobs:
       matrix:
         node:
           - "20"
-          - "22"
-          - "23"
+          # - "22"
+          # - "23"
         browser:
           - name: "Google Chrome"
             type: "chrome"
             version: "stable"
-          - name: "Google Chrome Beta"
-            type: "chrome"
-            version: "beta"
-          - name: "Google Chrome Dev"
-            type: "chrome"
-            version: "dev"
+          # - name: "Google Chrome Beta"
+          #   type: "chrome"
+          #   version: "beta"
+          # - name: "Google Chrome Dev"
+          #   type: "chrome"
+          #   version: "dev"
           # - name: "Google Chrome Canary"
           #   type: "chrome"
           #   version: "canary"
           - name: "Microsoft Edge"
             type: "msedge"
             version: "stable"
-          - name: "Microsoft Edge Beta"
-            type: "msedge"
-            version: "beta"
-          - name: "Microsoft Edge Dev"
-            type: "msedge"
-            version: "dev"
+          # - name: "Microsoft Edge Beta"
+          #   type: "msedge"
+          #   version: "beta"
+          # - name: "Microsoft Edge Dev"
+          #   type: "msedge"
+          #   version: "dev"
           # - name: "Microsoft Edge Canary"
           #   type: "edge"
           #   version: "canary"
@@ -82,7 +82,14 @@ jobs:
       - run: pnpm exec playwright install ${{ matrix.browser.type }} --with-deps
       - run: pnpm exec playwright test --project="${{ matrix.browser.name }}"
         env:
+          PLAYWRIGHT_BROWSERS_PATH: ${{ steps.setup-chrome.outputs.chrome-path }}
           VITE_TEST_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
+        if: matrix.browser.type == 'chrome'
+      - run: pnpm exec playwright test --project="${{ matrix.browser.name }}"
+        env:
+          PLAYWRIGHT_BROWSERS_PATH: ${{ steps.setup-msedge.outputs.msedge-path }}
+          VITE_TEST_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
+        if: matrix.browser.type == 'msedge'
       # - uses: actions/upload-artifact@v4
       #   if: always()
       #   with:
