--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -27,9 +27,9 @@ jobs:
           - name: "Google Chrome"
             type: "chrome"
             version: "stable"
-          # - name: "Google Chrome Beta"
-          #   type: "chrome"
-          #   version: "beta"
+          - name: "Google Chrome Beta"
+            type: "chrome"
+            version: "beta"
           # - name: "Google Chrome Dev"
           #   type: "chrome"
           #   version: "dev"
@@ -39,9 +39,9 @@ jobs:
           - name: "Microsoft Edge"
             type: "msedge"
             version: "stable"
-          # - name: "Microsoft Edge Beta"
-          #   type: "msedge"
-          #   version: "beta"
+          - name: "Microsoft Edge Beta"
+            type: "msedge"
+            version: "beta"
           # - name: "Microsoft Edge Dev"
           #   type: "msedge"
           #   version: "dev"
