--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -24,9 +24,9 @@ jobs:
           # - "22"
           # - "23"
         browser:
-          - name: "Google Chrome"
-            type: "chrome"
-            version: "stable"
+          # - name: "Google Chrome"
+          #   type: "chrome"
+          #   version: "stable"
           - name: "Google Chrome Beta"
             type: "chrome"
             version: "beta"
@@ -36,9 +36,9 @@ jobs:
           # - name: "Google Chrome Canary"
           #   type: "chrome"
           #   version: "canary"
-          - name: "Microsoft Edge"
-            type: "msedge"
-            version: "stable"
+          # - name: "Microsoft Edge"
+          #   type: "msedge"
+          #   version: "stable"
           - name: "Microsoft Edge Beta"
             type: "msedge"
             version: "beta"
