ブラウザを有効にする

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -24,16 +24,16 @@ jobs:
         browser:
           - name: "Chromium"
             type: "chromium"
-          # - name: "Google Chrome"
-          #   type: "chrome"
-          # - name: "Google Chrome Beta"
-          #   type: "chrome-beta"
-          # - name: "Microsoft Edge"
-          #   type: "msedge"
-          # - name: "Microsoft Edge Beta"
-          #   type: "msedge-beta"
-          # - name: "Microsoft Edge Dev"
-          #   type: "msedge-dev"
+          - name: "Google Chrome"
+            type: "chrome"
+          - name: "Google Chrome Beta"
+            type: "chrome-beta"
+          - name: "Microsoft Edge"
+            type: "msedge"
+          - name: "Microsoft Edge Beta"
+            type: "msedge-beta"
+          - name: "Microsoft Edge Dev"
+            type: "msedge-dev"
     env:
       VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
       VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
