--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -14,7 +14,7 @@ on:
     - cron: "0 2 * * 1-5"
 
 jobs:
-  e2e-test:
+  e2e-test-ubuntu:
     strategy:
       matrix:
         node:
@@ -70,6 +70,50 @@ jobs:
       #     path: playwright-report/
       #     retention-days: 30
 
+  e2e-test-macos:
+    strategy:
+      matrix:
+        node:
+          # - "20"
+          # - "22"
+          - "23"
+        browser:
+          - name: "Google Chrome Canary"
+            type: "chrome-canary"
+          - name: "Microsoft Edge Canary"
+            type: "msedge-canary"
+    env:
+      VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
+      VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
+      VITE_TEST_WHEP_ENDPOINT_URL: ${{ secrets.TEST_WHEP_ENDPOINT_URL }}
+      VITE_TEST_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
+      VITE_TEST_API_URL: ${{ secrets.TEST_API_URL }}
+      VITE_TEST_SECRET_KEY: ${{ secrets.TEST_SECRET_KEY }}
+    runs-on: macos-15
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+      - run: pnpm --version
+      - run: pnpm install
+      - run: pnpm run build
+      - run: pnpm exec playwright install ${{ matrix.browser.type }} --with-deps
+      - run: pnpm exec playwright test --project="${{ matrix.browser.name }}"
+        env:
+          VITE_TEST_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
+      # - uses: actions/upload-artifact@v4
+      #   if: always()
+      #   with:
+      #     name: playwright-report
+      #     path: playwright-report/
+      #     retention-days: 30
+
+
   # slack_notify_succeeded:
   #   needs: [e2e-test]
   #   runs-on: ubuntu-24.04
@@ -84,7 +128,7 @@ jobs:
   #         SLACK_ICON_EMOJI: ":star-struck:"
   #         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
   slack_notify_failed:
-    needs: [e2e-test]
+    needs: [e2e-test-ubuntu, e2e-test-macos]
     runs-on: ubuntu-24.04
     if: failure()
     steps:
